php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #36957 serialize() doesn't ends
Submitted: 2006-04-03 13:35 UTC Modified: 2006-04-05 02:30 UTC
From: andyjunkie at tiscali dot it Assigned:
Status: Closed Package: Scripting Engine problem
PHP Version: 5.1.2 OS: *nix, Windows XP sp2
Private report: No CVE-ID: None
 [2006-04-03 13:35 UTC] andyjunkie at tiscali dot it
Description:
------------
<?php 
$x = $GLOBALS;
print serialize($GLOBALS);
?>

<?php 
$x = $GLOBALS;
print serialize($x);
?>

Starts eating memory and never ends. 

Expected result:
----------------
Serialized $GLOBALS array, with some {RECURSION} reference


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2006-04-05 02:30 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sat Sep 19 00:00:02 2026 UTC