Fixed bug #36957 (serialize() does not handle recursion).